--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YuLauncher.Core.Pages.SettingPage"
+﻿<Page x:Class="YuLauncher.Core.Pages.SettingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,9 +7,16 @@
              xmlns:local="clr-namespace:YuLauncher.Core.Pages"
              mc:Ignorable="d" 
              d:DesignHeight="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" d:DesignWidth="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <StackPanel
+                    Orientation="Horizontal"
+                    ZIndex="4" Grid.RowSpan="2" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+            <Label Content="フルスクリーンON/OFF" Height="30" Width="120" Margin="0,-300,0,0"/>
 
-    
-    <Grid Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}">
-        
+        </StackPanel>
     </Grid>
-</UserControl>
+</Page>
