--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -8,43 +8,46 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              Style="{DynamicResource MahApps.Styles.Page}"
-             d:DesignHeight="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" d:DesignWidth="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
-    
+             d:DesignHeight="1080" d:DesignWidth="1920" SizeChanged="Page_SizeChanged" Grid.IsSharedSizeScope="True" ClipToBounds="True">
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="77*"/>
-            <ColumnDefinition Width="78*"/>
-            <ColumnDefinition Width="245*"/>
-            <ColumnDefinition Width="247*"/>
-            <ColumnDefinition Width="153*"/>
+            <ColumnDefinition Width="90*"/>
+            <ColumnDefinition Width="95*"/>
+            <ColumnDefinition Width="323*"/>
+            <ColumnDefinition Width="292*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" MinHeight="30" />
-            <RowDefinition Height="22*" />
-            <RowDefinition Height="12*"/>
-            <RowDefinition Height="13*"/>
-            <RowDefinition Height="60*"/>
-            <RowDefinition Height="43*"/>
+            <RowDefinition Height="54*" />
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="32*"/>
+            <RowDefinition Height="148*"/>
+            <RowDefinition Height="75*"/>
+            <RowDefinition Height="31*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <StackPanel
                     Orientation="Horizontal"
-                    ZIndex="4" Grid.ColumnSpan="5">
+                    ZIndex="4" Grid.ColumnSpan="4">
             <Label Content="フルスクリーン" Width="80" Height="30"/>
             <CheckBox x:Name="FullSc" Content="ON/OFF" IsChecked="False" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked" Loaded="FullSc_OnLoaded" Click="FullSc_OnClick"></CheckBox>
         </StackPanel>
 
-        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Height="30" Width="70">
-            <Label Content="解像度変更" Height="30"/>
-        </StackPanel>
-        <StackPanel Grid.Row="2" Height="24" VerticalAlignment="Center" Grid.Column="0" Margin="8,0,9,0">
-            <TextBox x:Name="TXTRES1" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1920" HorizontalAlignment="Left" Loaded="TXTRES1_Loaded"/>
-        </StackPanel>
-        <StackPanel Grid.Column="1" Grid.Row="2" Margin="9,0,9,0">
-            <TextBox x:Name="TXTRES2" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1080" HorizontalAlignment="Stretch" Loaded="TXTRES2_Loaded"/>
-        </StackPanel>
-        <StackPanel Grid.Row="3" Grid.ColumnSpan="2" Height="30" Width="50">
+        <Grid Grid.Row="1" Grid.ColumnSpan="2" >
+            <Label Content="解像度変更" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="0">
+            <TextBox x:Name="TXTRES1" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1920" HorizontalAlignment="Center" Loaded="TXTRES1_Loaded" VerticalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Column="1" Grid.Row="2">
+            <TextBox x:Name="TXTRES2" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1080" Loaded="TXTRES2_Loaded" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        </Grid>
+        <Grid Grid.Row="3" Grid.ColumnSpan="2">
             <Button Style="{DynamicResource MahApps.Styles.Button.Flat}" Height="30" Width="50" Content="保存" Click="Button_Click"/>
-        </StackPanel>
+        </Grid>
+        <Grid Grid.Row="6"  Grid.Column="3">
+            <Button Style="{DynamicResource MahApps.Styles.Button.Flat}" Content="終了"></Button>
+        </Grid>
     </Grid>
 </Page>
