--- a/YuLauncher/Core/Window/Pages/MainPage.xaml
+++ b/YuLauncher/Core/Window/Pages/MainPage.xaml
@@ -9,16 +9,14 @@
       d:DesignHeight="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" d:DesignWidth="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch"
-                    Orientation="Horizontal"
-                    ZIndex="4">
-        <Viewbox Stretch="Uniform" StretchDirection="Both">
-        <Button x:Name="SettingBTN" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Width="50" Height="30" Margin="10,60,740,310" Content="設定" Click="SettingBTN_OnClick"/>
-        </Viewbox>
-            </StackPanel>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" x:Name="SettingBTN" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="設定" Click="SettingBTN_OnClick"/>
+        </Grid>
     </Grid>
 </Page>
