--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -8,46 +8,44 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              Style="{DynamicResource MahApps.Styles.Page}"
-             d:DesignHeight="1080" d:DesignWidth="1920" SizeChanged="Page_SizeChanged" Grid.IsSharedSizeScope="True" ClipToBounds="True">
+             d:DesignHeight="400" d:DesignWidth="800" MinHeight="400" MinWidth="800" SizeChanged="Page_SizeChanged" UseLayoutRounding="True">
 
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90*"/>
-            <ColumnDefinition Width="95*"/>
-            <ColumnDefinition Width="323*"/>
-            <ColumnDefinition Width="292*"/>
-        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" MinHeight="30" />
-            <RowDefinition Height="54*" />
-            <RowDefinition Height="30*"/>
-            <RowDefinition Height="32*"/>
-            <RowDefinition Height="148*"/>
-            <RowDefinition Height="75*"/>
-            <RowDefinition Height="31*"/>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="30">
+            </RowDefinition>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="130*"/>
+            <RowDefinition Height="20*"/>
         </Grid.RowDefinitions>
-        <StackPanel
-                    Orientation="Horizontal"
-                    ZIndex="4" Grid.ColumnSpan="4">
-            <Label Content="フルスクリーン" Width="80" Height="30"/>
-            <CheckBox x:Name="FullSc" Content="ON/OFF" IsChecked="False" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked" Loaded="FullSc_OnLoaded" Click="FullSc_OnClick"></CheckBox>
-        </StackPanel>
 
-        <Grid Grid.Row="1" Grid.ColumnSpan="2" >
-            <Label Content="解像度変更" Height="30" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="フルスクリーン" FontSize="18" VerticalAlignment="Top"/>
+            <CheckBox Grid.Column="1" x:Name="FullSc" Content="ON/OFF" IsChecked="False" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked" Loaded="FullSc_OnLoaded" Click="FullSc_OnClick" VerticalAlignment="Top"/>
         </Grid>
-        <Grid Grid.Row="2" Grid.Column="0">
-            <TextBox x:Name="TXTRES1" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1920" HorizontalAlignment="Center" Loaded="TXTRES1_Loaded" VerticalAlignment="Center"/>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" Text="解像度変更" Height="30" FontSize="18"/>
+            <TextBox Grid.Column="1" x:Name="TXTRES1" mah:TextBoxHelper.ClearTextButton="True" Text="1920" Loaded="TXTRES1_Loaded"/>
+            <TextBox Grid.Column="2" x:Name="TXTRES2" mah:TextBoxHelper.ClearTextButton="True" Text="1080" Loaded="TXTRES2_Loaded"/>
+            <Button Grid.Column="3" Style="{DynamicResource MahApps.Styles.Button.Flat}" Content="保存" Click="Button_Click"/>
         </Grid>
-        <Grid Grid.Column="1" Grid.Row="2">
-            <TextBox x:Name="TXTRES2" mah:TextBoxHelper.ClearTextButton="True" Width="60" Height="20" Text="1080" Loaded="TXTRES2_Loaded" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        </Grid>
-        <Grid Grid.Row="3" Grid.ColumnSpan="2">
-            <Button Style="{DynamicResource MahApps.Styles.Button.Flat}" Height="30" Width="50" Content="保存" Click="Button_Click"/>
-        </Grid>
-        <Grid Grid.Row="6"  Grid.Column="3">
-            <Button Style="{DynamicResource MahApps.Styles.Button.Flat}" Content="終了"></Button>
+        <Grid Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Button x:Name="FCBTN" Style="{DynamicResource MahApps.Styles.Button.Flat}" Content="終了" Click="FCBTN_Click"/>
         </Grid>
     </Grid>
 </Page>
