--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -8,7 +8,7 @@
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              Style="{DynamicResource MahApps.Styles.Page}"
-             d:DesignHeight="400" d:DesignWidth="800" MinHeight="400" MinWidth="800" SizeChanged="Page_SizeChanged" UseLayoutRounding="True">
+             d:DesignHeight="400" d:DesignWidth="800" MinHeight="400" MinWidth="800" UseLayoutRounding="True">
 
     <Grid>
         <Grid.RowDefinitions>
