--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -11,7 +11,7 @@
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:pages="clr-namespace:YuLauncher.Core.Pages" DpiChanged="MetroWindow_DpiChanged" Loaded="MetroWindow_Loaded" SizeChanged="MetroWindow_SizeChanged" MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight">
+    xmlns:pages="clr-namespace:YuLauncher.Core.Pages" MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight">
     <Grid Height="400" MinWidth="800" MinHeight="400" ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
