--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="YuLauncher.Game.Window.GameWindow"
+﻿<Controls:MetroWindow x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,12 +8,22 @@
         mc:Ignorable="d"
         xmlns:properties="clr-namespace:YuLauncher.Properties"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-        Title="GameWindow" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="GameWindow" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Loaded="GameWindow1_Loaded">
+
 
     <DockPanel x:Name="gamedock" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
-            <wv2:WebView2 Name="webView"
-                  Source="" Initialized="webView_Initialized"
-   />
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="機能">
+                <MenuItem Header="Wiki" Click="WikiBTN"/>
+            </MenuItem>
+            <MenuItem Header="アプリケーション">
+                <MenuItem Header="設定"/>
+            </MenuItem>
+        </Menu>
+        
+        <wv2:WebView2 Name="webView"
+                      Source="" Initialized="webView_Initialized"
+        />
         </DockPanel>
     
 </Controls:MetroWindow>
