--- a/YuLauncher/Core/Window/Pages/MainPage.xaml
+++ b/YuLauncher/Core/Window/Pages/MainPage.xaml
@@ -1,26 +1,49 @@
-﻿<Page x:Class="YuLauncher.Core.Pages.MainPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:YuLauncher.Core.Pages"
-      xmlns:properties="clr-namespace:YuLauncher.Properties"
-      mc:Ignorable="d" 
-      d:DesignHeight="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" d:DesignWidth="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
+﻿<Page
+    d:DesignHeight="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
+    d:DesignWidth="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
+    mc:Ignorable="d"
+    x:Class="YuLauncher.Core.Pages.MainPage"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:YuLauncher.Core.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:properties="clr-namespace:YuLauncher.Properties"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="30" />
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
             <RowDefinition />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
-            <Button Grid.Column="0" x:Name="StartBTN" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="ゲーム一覧" Click="StartBTN_Click"/>
+            <Button
+                Click="StartBTN_Click"
+                Content="ゲーム一覧"
+                Grid.Column="0"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
+                x:Name="StartBTN" />
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" x:Name="SettingBTN" Style="{StaticResource MahApps.Styles.Button.Square.Accent}" Content="設定" Click="SettingBTN_OnClick"/>
+            <Button
+                Click="SettingBTN_OnClick"
+                Content="設定"
+                Grid.Column="0"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
+                x:Name="SettingBTN" />
+        </Grid>
+        <Grid Grid.Row="2">
+            <Button
+                Click="LoginHistoryBTN_OnClick"
+                Content="ログイン履歴"
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
+        </Grid>
+        <Grid Grid.Row="3">
+            <Label x:Name="LatestLogin" />
         </Grid>
     </Grid>
 </Page>
