--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -3,7 +3,7 @@
     Title="YuLancher"
     Width="800"
     mc:Ignorable="d"
-    x:Class="YuLauncher.MainWindow"
+    x:Class="YuLauncher.Core.Window.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:YuLauncher"
@@ -11,7 +11,7 @@
     xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:pages="clr-namespace:YuLauncher.Core.Pages" MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight">
+    MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight" Closing="MetroWindow_Closing">
     <Grid Height="400" MinWidth="800" MinHeight="400" ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
