--- a/YuLauncher/Core/Window/Pages/GameHistoryPage.xaml
+++ b/YuLauncher/Core/Window/Pages/GameHistoryPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="YuLauncher.Core.Window.Pages.GameHistoryPage"
+﻿<Page x:Name="page" x:Class="YuLauncher.Core.Window.Pages.GameHistoryPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,6 +10,6 @@
       Title="GameHistoryPage">
 
     <Grid>
-        
+        <Calendar HorizontalAlignment="Center" IsTodayHighlighted="False"/>
     </Grid>
 </Page>
