--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -1,10 +1,9 @@
-﻿<Page xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"  x:Class="YuLauncher.Core.Pages.SettingPage"
+﻿<Page xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"  x:Class="YuLauncher.Core.Window.Pages.SettingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:properties="clr-namespace:YuLauncher.Properties"
-             xmlns:local="clr-namespace:YuLauncher.Core.Pages"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              Style="{DynamicResource MahApps.Styles.Page}"
