--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -21,9 +21,8 @@
             </MenuItem>
         </Menu>
         
-        <wv2:WebView2 Name="webView"
-                      Source="" Initialized="webView_Initialized"
-        />
-        </DockPanel>
-    
+        <wv2:WebView2 x:Name="webView" DataContext="webView"></wv2:WebView2>
+
+    </DockPanel>
+
 </Controls:MetroWindow>
