--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -10,31 +10,31 @@
     xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
     x:Name="GameWindow1"
     Title="GameWindow"
-    Width="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
-    Height="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
+    Width="800"
+    Height="400"
     Closing="GameWindow1_Closing"
     Loaded="GameWindow1_Loaded"
-    ResizeMode="CanMinimize"
     WindowStartupLocation="CenterScreen"
     WindowStyle="None"
     mc:Ignorable="d">
 
-
-    <DockPanel
-        x:Name="gamedock"
-        Width="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
-        Height="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}">
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="機能">
-                <MenuItem Click="WikiBTN" Header="Wiki" />
-            </MenuItem>
-            <MenuItem Header="アプリケーション">
-                <MenuItem Header="設定" />
-            </MenuItem>
-        </Menu>
-
-        <wv2:WebView2 x:Name="webView" DataContext="webView" />
-
-    </DockPanel>
-
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="13*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Menu>
+                <MenuItem Header="機能">
+                    <MenuItem Click="WikiBTN" Header="Wiki" />
+                </MenuItem>
+                <MenuItem Header="アプリケーション">
+                    <MenuItem Header="設定" />
+                </MenuItem>
+            </Menu>
+        </Grid>
+        <Grid Grid.Row="1">
+            <wv2:WebView2 x:Name="webView"/>
+        </Grid>
+    </Grid>
 </Controls:MetroWindow>
