ゲームのお気に入り機能の開発を少し進めた

--- a/YuLauncher/Core/Window/Pages/GameListPage.xaml
+++ b/YuLauncher/Core/Window/Pages/GameListPage.xaml
@@ -43,7 +43,13 @@
                 Click="August_myth_Click"
                 Content="あいミスR(WebRender)"
                 DataContext="あいミスR"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
+                Style="{StaticResource MahApps.Styles.Button.Square.Accent}">
+                <Button.ContextMenu>
+                    <ContextMenu>
+                        <MenuItem Header="よく遊ぶゲームに登録します" Click="MenuItem_OnClick"/>
+                    </ContextMenu>
+                </Button.ContextMenu>
+                </Button>
         </Grid>
 
         <Grid
